Cycles gets stuck rendering final tile at 100% CPU #43562

Closed
opened 2015-02-04 14:52:05 +01:00 by Caleb · 23 comments

System Information
Operating system and graphics card

Blender Version
Broken: 2.73a bbf09d9

Short description of error
Cycles gets stuck rendering the final tile of this blend file , using 100% CPU. This only seems to happen above a certain sample count; when using a low sample count such as 10 it does not occur.

Exact steps for others to reproduce the error
Open the linked .blend file and render it.

**System Information** Operating system and graphics card **Blender Version** Broken: 2.73a bbf09d9 **Short description of error** Cycles gets stuck rendering the final tile of [this blend file ](https://dl.dropboxusercontent.com/u/3760757/test.blend), using 100% CPU. This only seems to happen above a certain sample count; when using a low sample count such as 10 it does not occur. **Exact steps for others to reproduce the error** Open the linked .blend file and render it.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Sebastian Koenig was assigned by Caleb 2015-02-04 14:52:05 +01:00
Author

Added subscriber: @comcal116

Added subscriber: @comcal116
Sebastian Koenig was unassigned by Julian Eisel 2015-02-04 14:55:13 +01:00
Sergey Sharybin was assigned by Julian Eisel 2015-02-04 14:55:13 +01:00
Member

Added subscribers: @sebastian_k, @JulianEisel

Added subscribers: @sebastian_k, @JulianEisel
Member

Assigning to sergey as requested on IRC

Assigning to sergey as requested on IRC
Author

Appears to be related to volumetrics, as disabling them causes the render to complete successfully. I've also tested this on OS X and Windows, so it doesn't appear to be a platform-specific issue.

Appears to be related to volumetrics, as disabling them causes the render to complete successfully. I've also tested this on OS X and Windows, so it doesn't appear to be a platform-specific issue.

Added subscriber: @zeauro

Added subscriber: @zeauro

It looks like a problematic geometry. Disabling last bevel modifier is sufficient to render.

It looks like a problematic geometry. Disabling last bevel modifier is sufficient to render.
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Please fill out the information on your computer

GPU or CPU rendering all this is need to help with this bug

I am not able to reproduce when rendering on CPU

Please fill out the information on your computer GPU or CPU rendering all this is need to help with this bug I am not able to reproduce when rendering on CPU
Author

On one machine I tested I was using an Intel i7 3770K and on another an Intel i5 4288U.

On one machine I tested I was using an Intel i7 3770K and on another an Intel i5 4288U.
Member

so both are rendering on cpu

how long about is it getting "Stuck"

so both are rendering on cpu how long about is it getting "Stuck"
Author

Forever - the last tile never finishes rendering and uses 100% CPU for the thread rendering the tile.

Forever - the last tile never finishes rendering and uses 100% CPU for the thread rendering the tile.
Member

well i have completed the render could you try changing these settings

  1. Auto detect threads instead of fixed
  2. the order of rendering tiles
  3. and what happens in the view port
  4. also what GPU are you using
well i have completed the render could you try changing these settings 1. Auto detect threads instead of fixed 2. the order of rendering tiles 3. and what happens in the view port 4. also what GPU are you using
Member

well i have completed the render could you try changing these settings

  1. Auto detect threads instead of fixed
  2. the order of rendering tiles
  3. and what happens in the view port
  4. also what GPU are you using
well i have completed the render could you try changing these settings 1. Auto detect threads instead of fixed 2. the order of rendering tiles 3. and what happens in the view port 4. also what GPU are you using
Author
  1. Same result; in fact it doesn't matter how many threads I use.
  2. Tried 'Top to Bottom' - same result. It appears to get stuck on the same tile as when I use 'Center'.
  3. In the viewport it gets stuck rendering the 6th sample and can't be stopped. If I make the viewport smaller, the number of samples I can render without freezing increases from 6 to about 10 or so.
  4. This shouldn't be relevant - but I am using an NVIDIA GTX 460 on my 3770K system and the integrated GPU (Intel Iris 5100) on the 4288U.
1. Same result; in fact it doesn't matter how many threads I use. 2. Tried 'Top to Bottom' - same result. It appears to get stuck on the same tile as when I use 'Center'. 3. In the viewport it gets stuck rendering the 6th sample and can't be stopped. If I make the viewport smaller, the number of samples I can render without freezing increases from 6 to about 10 or so. 4. This shouldn't be relevant - but I am using an NVIDIA GTX 460 on my 3770K system and the integrated GPU (Intel Iris 5100) on the 4288U.
Member

Have tried rendering on cpu and gpu not at the same time of course

The render does not get stuck but the view does get stuck saying it is "paused"

is that a feature?

Have tried rendering on cpu and gpu not at the same time of course The render does not get stuck but the view does get stuck saying it is "paused" is that a feature?
Author

No, the viewport wasn't paused when I tested it; that's only how the file was saved. I can't render the scene on my GPU since it uses too much memory for my card. It'd be great if someone could test this on a GPU with more VRAM.

@zeauro was able to reproduce the issue above, so I don't think it's just my setup.

No, the viewport wasn't paused when I tested it; that's only how the file was saved. I can't render the scene on my GPU since it uses too much memory for my card. It'd be great if someone could test this on a GPU with more VRAM. @zeauro was able to reproduce the issue above, so I don't think it's just my setup.
Member

can confirm but it happen when i tried to abort the render

can confirm but it happen when i tried to abort the render

If it can help, my CPU is an i7 4770K. I am under ubuntu 14.04 64 bits.

It is weird that it is not the same tile that freeze when I use official 2.73a and master 810c7ee.

If it can help, my CPU is an i7 4770K. I am under ubuntu 14.04 64 bits. It is weird that it is not the same tile that freeze when I use official 2.73a and master 810c7ee.

This issue was referenced by 25f33e058a

This issue was referenced by 25f33e058a7b57d4f5964609b29b3f0834b3e6b6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 25f33e058a.

Closed by commit 25f33e058a.

This issue was referenced by blender/cycles@7a87d44d8e

This issue was referenced by blender/cycles@7a87d44d8eb7ae7ef2693263fc36611280432bca
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43562
No description provided.