intern/cycles/kernel/kernel_path.h
@@ -373,8 +373,9 @@ ccl_device void kernel_path_subsurface_update_volume_stack(KernelGlobals *kg,
 
 	Ray volume_ray = *ray;
 	Intersection isect;
-
-	while(scene_intersect_volume(kg, &volume_ray, &isect))
+	int step = 0;
+	while(step < VOLUME_STACK_SIZE &&
+	      scene_intersect_volume(kg, &volume_ray, &isect))
 	{
 		ShaderData sd;
 		shader_setup_from_ray(kg, &sd, &isect, &volume_ray, 0, 0);
@@ -383,6 +384,7 @@ ccl_device void kernel_path_subsurface_update_volume_stack(KernelGlobals *kg,
 		/* Move ray forward. */
 		volume_ray.P = ray_offset(sd.P, -sd.Ng);
 		volume_ray.t -= sd.ray_length;
+		++step;
 	}
 }
 #endif
